--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
     <script src='https://cdn.jsdelivr.net/npm/vue'></script>
 </head>
 <body>
-    <h1>Components</h1>
-    <div id="vue-app-one">
-        <h2>Vue app one</h2>
-        <greeting></greeting>
-    </div>
-
-    <div id="vue-app-two">
-        <h2>Vue app two</h2>
-        <greeting></greeting>
+    <div id="vue-app">
+        <h2>Refs</h2>
+        <input type="text" ref="input"/>
+        <button v-on:click="readRefs">Submit</button>
+        <p>Your fav food: {{ output }}</p>
+        <div ref="test">Hello</div>
     </div>
     
     <script src="app.js"></script>
